--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <img src="lflogo.png">
-    <p>COMIN' SOON</p>
+    <p>that one group, y'know the one ^c '</p>
+	<p>COMIN' SOON</p>
     <p>⠀</p>
     <p>⠀</p>    
     <p>⠀</p>    
