--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     <p>that one group, y'know the one ^c '</p>
 	<p>COMIN' SOON</p>
     <p>⠀</p>
-    <p>⠀</p>    
-    <p>⠀</p>    
+	<p>Sonic 3 A.I.R. Mods:</p>
+    <p>Agent Stone DEMO</p>    
+    <p>Proto Characters</p>
+    <p>rosie's Restyled S1 Sonic</p>    
+    <p>Sonic Origins - Classic Shield + Rings</p>
+    <p>Rainbow Dash over Tails</p>
     <p>⠀</p>
-    <p>⠀</p>    
-    <p>⠀</p>
-    <p>⠀</p>
-    <p>⠀</p>
-    <p>⠀</p>
+    <ul>
+      <p>
+		<a href="https://rosy-eclairs.neocities.org/home.html"><img src="https://perplexingpixels.neocities.org/RDicon.gif"></p> 
+    </ul>
     <p>⠀</p>    
     <p>⠀</p>    
     <p>⠀</p>
