--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>⠀</p>
     <ul>
       <p>
-		<a href="https://rosy-eclairs.neocities.org/home.html"><img src="https://perplexingpixels.neocities.org/RDicon.gif"></p> 
+		<a href="https://hazelspooder.github.io/lunarfluorite/rd.html"><img src="https://perplexingpixels.neocities.org/RDicon.gif"></p> 
     </ul>
 
 
