--- a/rd.html
+++ b/rd.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LunarFluorite🌙</title>
+    <title>[3MOD]RD over Tails - LunarFluorite🌙</title>
     <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
@@ -15,17 +15,8 @@
     <p>that one group, y'know the one ^c '</p>
 	<p>COMIN' SOON</p>
     <p>⠀</p>
-	<p>Sonic 3 A.I.R. Mods:</p>
-    <p>Agent Stone DEMO</p>    
-    <p>Proto Characters</p>
-    <p>rosie's Restyled S1 Sonic</p>    
-    <p>Sonic Origins - Classic Shield + Rings</p>
-    <p>Rainbow Dash over Tails</p>
-    <p>⠀</p>
-    <ul>
-      <p>
-		<a href="https://rosy-eclairs.neocities.org/home.html"><img src="https://perplexingpixels.neocities.org/RDicon.gif"></p> 
-    </ul>
+	<p>Sonic 3 is lookin about 20% Cooler!</p>
+
 
 
     
