--- a/rd.html
+++ b/rd.html
@@ -12,16 +12,28 @@
   </head>
   <body>
     <img src="lflogo.png">
-    <p>that one group, y'know the one ^c '</p>
-	<p>COMIN' SOON</p>
-    <p>⠀</p>
-	<p>Sonic 3 is lookin about 20% Cooler!</p>
 
 
-
-    
-    <footer style="margin-right:-11px; margin-left:-10px;" align="bottom">
-  <p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a></p>
+    <img src="rd/1.jpg">
+		<p>Sonic 3 is lookin about 20% Cooler!</p>
+		<p>Rainbow Dash replaces Tails, pretty obvious.</p>
+				<p>Original hack by jdragondawn, ported to 3A.I.R. by rosy_eclairs & lavesiime.</p>
+    <p><a href="https://hazelspooder.github.io/lunarfluorite/rd/RD.7z"><p>Download</p></p> 
+	<a href="https://hazelspooder.github.io/lunarfluorite/rd/2.jpg"><img src="rd/2.jpg"width="212" 
+     height="120" />
+	<a href="https://hazelspooder.github.io/lunarfluorite/rd/3.jpg"><img src="rd/3.jpg"width="212" 
+     height="120" />
+	 	<a href="https://hazelspooder.github.io/lunarfluorite/rd/4.jpg"><img src="rd/4.jpg"width="212" 
+     height="120" />
+	 	<a href="https://hazelspooder.github.io/lunarfluorite/rd/5.jpg"><img src="rd/5.jpg"width="212" 
+     height="120" />
+	 	<a href="https://hazelspooder.github.io/lunarfluorite/rd/6.jpg"><img src="rd/6.jpg"width="212" 
+     height="120" />
+	 
+	 <p></p>
+	 
+ <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
+  <a href="https://rosy-eclairs.uwu.ai/">site created by ~rosy_eclairs</a></p>
 </footer>
   </body>
 </html>
