--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LunarFluorite🌙</title>
+
     <!-- The style.css file allows you to change the look of your web pages.
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+	
+	
+	
   </head>
-  <body>
+<body>
+
+
+
     <img src="lflogo.png">
     <p>that one group, y'know the one ^c '</p>
 	<p>COMIN' SOON</p>
@@ -20,16 +27,12 @@
     <p>Proto Characters</p>
     <p>rosie's Restyled S1 Sonic</p>    
     <p>Sonic Origins - Classic Shield + Rings</p>
-    <p>Rainbow Dash over Tails</p>
-    <p>⠀</p>
     <ul>
-      <p>
-		<a href="https://hazelspooder.github.io/lunarfluorite/rd.html"><img src="https://perplexingpixels.neocities.org/RDicon.gif"></p> 
+      <p><a href="https://hazelspooder.github.io/lunarfluorite/rd.html"><img src="modicons/RD.gif" </p> 
     </ul>
 
-
     
-    <footer style="margin-right:-11px; margin-left:-10px;" align="bottom">
+    <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
   <p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a></p>
 </footer>
   </body>
