--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
     <p>that one group, y'know the one ^c '</p>
 	<p>COMIN' SOON</p>
     <p>⠀</p>
-	<p>Sonic 3 A.I.R. Mods:</p>
-    <p>Agent Stone DEMO</p>    
-    <p>Proto Characters</p>
-    <p>rosie's Restyled S1 Sonic</p>    
-    <p>Sonic Origins - Classic Shield + Rings</p>
+	<p>Sonic 3 A.I.R. Mods:</p> 
     <ul>
-      <p><a href="https://hazelspooder.github.io/lunarfluorite/rd.html"><img src="modicons/RD.gif" </p> 
+      <p><a href="https://hazelspooder.github.io/lunarfluorite/rd.html"><img src="modicons/rd.gif" </p> 
+	        <p><a href="https://hazelspooder.github.io/lunarfluorite/classic_shield.html"><img src="modicons/cla.png" </p> 
     </ul>
 
     
