--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 	<p>Sonic 3 A.I.R. Mods:</p> 
     <ul>
       <p><a href="https://hazelspooder.github.io/lunarfluorite/rd.html"><img src="modicons/rd.gif" </p> 
-	        <p><a href="https://hazelspooder.github.io/lunarfluorite/classic_shield.html"><img src="modicons/cla.png" </p> 
+	        <p><a href="https://hazelspooder.github.io/lunarfluorite/classic_shield.html"width="160" 
+     height="112"><img src="modicons/cla.png" </p> 
     </ul>
 
     
