--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     
     <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
-  <p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a></p>
+  <p><a href="https://rosy-eclairs.uwu.ai/">site created by ~rosy_eclairs</a></p>
 </footer>
   </body>
 </html>
