--- a/index.html
+++ b/index.html
@@ -18,17 +18,27 @@
 
 
 
-    <img src="lflogo.png">
-    <p>that one group, y'know the one ^c '</p>
-	<p>COMIN' SOON</p>
-    <p>⠀</p>
-	<p>Sonic 3 A.I.R. Mods:</p> 
-    <ul>
-      <p><a href="https://hazelspooder.github.io/lunarfluorite/rd.html"><img src="modicons/rd.gif" </p> 
-	        <p><a href="https://hazelspooder.github.io/lunarfluorite/classic_shield.html"><img src="modicons/clasring.gif" </p> 
-    </ul>
+    <img src="lflogo.png"style="padding-bottom:24px;padding-top:24px;">
+	<p>a unicorn and a spider walk into a bar...and then a husky smashed through a window!?</p>
+	<p>with their powers combined, they made...a modding group?</p>
+    <p>⚠️Site still a WIP!!⚠️</p>
+	<h1>Sonic 3 A.I.R. Mods:</h1> 
 
-    
+	<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd.html"><img src="modicons/rd.gif"style="padding:16px;"</p>‎<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield.html"><img src="modicons/clasring.gif"style="padding:16px;"</p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails.html"><img src="modicons/styletails.gif"style="padding:16px;"</p><a href="https://www.youtube.com/watch?v=qTQD_2XPMRw"><img src="modicons/stone.gif" style="padding:16px;"</p>
+
+
+
+
+	<p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p>
+
+
+
+
+	<p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p>
+
+
+
+
     <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
   <p><a href="https://rosy-eclairs.uwu.ai/">site created by ~rosy_eclairs</a></p>
 </footer>
