--- a/3airmods/clashield.html
+++ b/3airmods/clashield.html
@@ -11,17 +11,17 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   </head>
   <body>
-    <img src="lflogo.png">
+    <img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png">
 	<p></p>
 
     <img src="clashield/1.png">
 		<p>Introducing... Origins Classic Shield and Rings for 3A.I.R.!</p>
 <p>I changed the art for rings and the shield to look like their Origins counterparts and Hazel did the code for changing colors, per-character preference and transparency options.</p>
 		<p>Mod by panoramhusky & HazelSpooder.</p>
-		<p><a href="https://hazelspooder.github.io/lunarfluorite/clashield/Sonic_Origins_Classic_Shield__Rings.zip"><p>Download</p></p> 
-			<p></p>
-				<p></p>
-					<p></p>
+		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield/Sonic_Origins_Classic_Shield__Rings.zip"><p>Download</p>
+		<a href="clashield/2.png"><img src="clashield/2.png"style="padding:2px;"width="212"height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield/3.png"><img src="clashield/3.png"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield/4.png"><img src="clashield/4.png"style="padding:2px;"width="212" 
+     height="120" /></p> 
  <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
   <a href="https://rosy-eclairs.uwu.ai/">site created by ~rosy_eclairs</a></p>
 </footer>
