--- a/3airmods/rd.html
+++ b/3airmods/rd.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   </head>
   <body>
-    <img src="lflogo.png">
+    <img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png">
 
 
     <img src="rd/1.jpg">
@@ -19,15 +19,11 @@
 		<p>Rainbow Dash replaces Tails, pretty obvious.</p>
 				<p>Original hack by jdragondawn, ported to 3A.I.R. by rosy_eclairs & lavesiime.</p>
     <p><a href="https://hazelspooder.github.io/lunarfluorite/rd/RD.7z"><p>Download</p></p> 
-	<a href="https://hazelspooder.github.io/lunarfluorite/rd/2.jpg"><img src="rd/2.jpg"width="212" 
-     height="120" />
-	<a href="https://hazelspooder.github.io/lunarfluorite/rd/3.jpg"><img src="rd/3.jpg"width="212" 
-     height="120" />
-	 	<a href="https://hazelspooder.github.io/lunarfluorite/rd/4.jpg"><img src="rd/4.jpg"width="212" 
-     height="120" />
-	 	<a href="https://hazelspooder.github.io/lunarfluorite/rd/5.jpg"><img src="rd/5.jpg"width="212" 
-     height="120" />
-	 	<a href="https://hazelspooder.github.io/lunarfluorite/rd/6.jpg"><img src="rd/6.jpg"width="212" 
+	<a href="https://hazelspooder.github.io/lunarfluorite/rd/2.jpg"><img src="rd/2.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/rd/3.jpg"><img src="rd/3.jpg"style="padding:2px;"width="212" 
+     height="120" /><a href="https://hazelspooder.github.io/lunarfluorite/rd/4.jpg"><img src="rd/4.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/rd/5.jpg"><img src="rd/5.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/rd/6.jpg"><img src="rd/6.jpg"style="padding:2px;"width="212" 
      height="120" />
 	 
 	 <p></p>
