--- a/3airmods/styletails.html
+++ b/3airmods/styletails.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   </head>
   <body>
-    <img src="lflogo.png">
+    <img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png">
 	<p></p>
 
     <img src="styletails/1.jpg">
@@ -20,17 +20,12 @@
 		<p>Mod by panoramhusky</p>
 		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/stylized_tails"><p>Download</p>
 		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/stylized_tails_data_folder_mode_assets"><p>Data Folder Mode Assets</p>
-			<a href="https://hazelspooder.github.io/lunarfluorite/styletails/2.jpg"><img src="styletails/2.jpg"width="212" 
-     height="120" />
-	<a href="https://hazelspooder.github.io/lunarfluorite/styletails/3.jpg"><img src="styletails/3.jpg"width="212" 
-     height="120" />
-	 	<a href="https://hazelspooder.github.io/lunarfluorite/styletails/4.jpg"><img src="styletails/4.jpg"width="212" 
-     height="120" />
-	 	<a href="https://hazelspooder.github.io/lunarfluorite/styletails/5.jpg"><img src="styletails/5.jpg"width="212" 
-     height="120" />
-	 	<a href="https://hazelspooder.github.io/lunarfluorite/styletails/6.jpg"><img src="styletails/6.jpg"width="212" 
-     height="120" />
-	 	<a href="https://hazelspooder.github.io/lunarfluorite/styletails/7.jpg"><img src="styletails/7.jpg"width="212" 
+			<a href="https://hazelspooder.github.io/lunarfluorite/styletails/2.jpg"><img src="styletails/2.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/styletails/3.jpg"><img src="styletails/3.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/styletails/4.jpg"><img src="styletails/4.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/styletails/5.jpg"><img src="styletails/5.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/styletails/6.jpg"><img src="styletails/6.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/styletails/7.jpg"><img src="styletails/7.jpg"style="padding:2px;"width="212" 
      height="120" />		
 		</p> 
 			<p></p>
