--- a/3airmods/rd.html
+++ b/3airmods/rd.html
@@ -18,12 +18,12 @@
 		<p>Sonic 3 is lookin about 20% Cooler!</p>
 		<p>Rainbow Dash replaces Tails, pretty obvious.</p>
 				<p>Original hack by jdragondawn, ported to 3A.I.R. by rosy_eclairs & lavesiime.</p>
-    <p><a href="https://hazelspooder.github.io/lunarfluorite/rd/RD.7z"><p>Download</p></p> 
-	<a href="https://hazelspooder.github.io/lunarfluorite/rd/2.jpg"><img src="rd/2.jpg"style="padding:2px;"width="212" 
-     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/rd/3.jpg"><img src="rd/3.jpg"style="padding:2px;"width="212" 
-     height="120" /><a href="https://hazelspooder.github.io/lunarfluorite/rd/4.jpg"><img src="rd/4.jpg"style="padding:2px;"width="212" 
-     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/rd/5.jpg"><img src="rd/5.jpg"style="padding:2px;"width="212" 
-     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/rd/6.jpg"><img src="rd/6.jpg"style="padding:2px;"width="212" 
+    <p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd/RD.7z"><p>Download</p></p> 
+	<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd/2.jpg"><img src="rd/2.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd/3.jpg"><img src="rd/3.jpg"style="padding:2px;"width="212" 
+     height="120" /><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd/4.jpg"><img src="rd/4.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd/5.jpg"><img src="rd/5.jpg"style="padding:2px;"width="212" 
+     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd/6.jpg"><img src="rd/6.jpg"style="padding:2px;"width="212" 
      height="120" />
 	 
 	 <p></p>
