--- a/3airmods/styletails.html
+++ b/3airmods/styletails.html
@@ -8,7 +8,7 @@
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://hazelspooder.github.io/lunarfluorite/favicon.png"/>
   </head>
   <body>
     <img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png">
