--- a/3airmods/clashield.html
+++ b/3airmods/clashield.html
@@ -15,13 +15,14 @@
 	<p></p>
 
     <img src="clashield/1.png">
-		<p>Introducing... Origins Classic Shield and Rings for 3A.I.R.!</p>
+		<p>Introducing... Origins Classic Shield and Rings for 3 A.I.R.!</p>
 <p>I changed the art for rings and the shield to look like their Origins counterparts and Hazel did the code for changing colors, per-character preference and transparency options.</p>
 		<p>Mod by panoramhusky & HazelSpooder.</p>
 		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield/Sonic_Origins_Classic_Shield__Rings.zip"><p>Download</p>
-		<a href="clashield/2.png"><img src="clashield/2.png"style="padding:2px;"width="212"height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield/3.png"><img src="clashield/3.png"style="padding:2px;"width="212" 
-     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield/4.png"><img src="clashield/4.png"style="padding:2px;"width="212" 
-     height="120" /></p> 
+		
+		<a href="clashield/2.png"><img src="clashield/2.png"style="padding:2px;"width="212" height="120"></a>
+		<a href="clashield/3.png"><img src="clashield/3.png"style="padding:2px;"width="212" height="120"></a>
+		<a href="clashield/4.png"><img src="clashield/4.png"style="padding:2px;"width="212" height="120"></a>
  <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
   <a href="https://rosy-eclairs.uwu.ai/">site created by ~rosy_eclairs</a></p>
 </footer>
