--- a/3airmods/styletails.html
+++ b/3airmods/styletails.html
@@ -20,13 +20,18 @@
 		<p>Mod by panoramhusky</p>
 		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/stylized_tails"><p>Download</p>
 		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/stylized_tails_data_folder_mode_assets"><p>Data Folder Mode Assets</p>
-	<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/2.jpg"><img src="styletails/2.jpg"style="padding:2px;"width="212" 
-     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/3.jpg"><img src="styletails/3.jpg"style="padding:2px;"width="212" 
-     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/4.jpg"><img src="styletails/4.jpg"style="padding:2px;"width="212" 
-     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/5.jpg"><img src="styletails/5.jpg"style="padding:2px;"width="212" 
-     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/6.jpg"><img src="styletails/6.jpg"style="padding:2px;"width="212" 
-     height="120"<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/7.jpg"><img src="styletails/7.jpg"style="padding:2px;"width="212" 
-     height="120" />		
+		
+		<a href="styletails/2.jpg"><img src="styletails/2.jpg"style="padding:2px;"width="212" height="120"></a>
+		
+		<a href="styletails/3.jpg"><img src="styletails/3.jpg"style="padding:2px;" width="212" height="120"></a>
+		
+		<a href="styletails/4.jpg"><img src="styletails/4.jpg"style="padding:2px;" width="212" height="120"></a>
+		
+		<a href="styletails/5.jpg"><img src="styletails/5.jpg"style="padding:2px;" width="212" height="120"></a>
+		
+		<a href="styletails/6.jpg"><img src="styletails/6.jpg"style="padding:2px;" width="212" height="120"></a>
+		
+		<a href="styletails/7.jpg"><img src="styletails/7.jpg"style="padding:2px;" width="212" height="120"></a>
 		</p> 
 			<p></p>
 				<p></p>
