oopsies fixed it fur ya >w<

--- a/3airmods/rd.html
+++ b/3airmods/rd.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="https://hazelspooder.github.io/lunarfluorite/favicon.png"/>
   </head>
   <body>
-    <img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png">
+    <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
 
 
     <img src="rd/1.jpg">
