--- a/3airmods/clashield.html
+++ b/3airmods/clashield.html
@@ -11,7 +11,8 @@
     <link rel="shortcut icon" type="image/png" href="https://hazelspooder.github.io/lunarfluorite/favicon.png"/>
   </head>
   <body>
-    <img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png">
+  <body>
+    <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
 	<p></p>
 
     <img src="clashield/1.png">
