--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>⚠️Site still a WIP!!⚠️</p>
 	<h1>Sonic 3 A.I.R. Mods:</h1> 
 
-	<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd.html"><img src="modicons/rd.gif"style="padding:16px;"</p>‎<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield.html"><img src="modicons/clasring.gif"style="padding:16px;"</p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails.html"><img src="modicons/styletails.gif"style="padding:16px;"</p><a href="https://www.youtube.com/watch?v=qTQD_2XPMRw"><img src="modicons/stone.gif" style="padding:16px;"</p>
+	<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd.html"><img src="modicons/rd.gif"style="padding:16px;"</p>‎<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield.html"><img src="modicons/clasring.gif"style="padding:16px;"</p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails.html"><img src="modicons/styletails.gif"style="padding:16px;"</p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/stone3.html"><img src="modicons/stone.gif" style="padding:16px;"</p>
 
 
 
