--- a/3airmods/stone3.html
+++ b/3airmods/stone3.html
@@ -18,8 +18,8 @@
 		<p>Sonic 3 Style</p>
 <p>Battle against the Doctor's favorite assistant from the movies in Sonic 3 A.I.R!
 </p>
-		<p>Mod by panoramhusky</p>
-		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/stone3/stone3air.zip"><p>Download</p>
+		<p>Mod by LunarFluorite</p>
+		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/stone3/stone_3_air.zip"><p>Download</p>
 		
 		<a href="stone3/2.jpg"><img src="stone3/2.jpg"style="padding:2px;"width="212" height="120"></a>
 		
