--- a/3airmods/stone3.html
+++ b/3airmods/stone3.html
@@ -15,8 +15,8 @@
 	<p></p>
 
     <img src="stone3/1.jpg">
-		<p>Sonic 3 Style</p>
-<p>Battle against the Doctor's favorite assistant from the movies in Sonic 3 A.I.R!
+		<p>Battle against the Doctor's favorite assistant from the movies in Sonic 3 A.I.R!</p>
+<p>Description here
 </p>
 		<p>Mod by LunarFluorite</p>
 		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/stone3/stone_3_air.zip"><p>Download</p>
