--- a/3airmods/clashield.html
+++ b/3airmods/clashield.html
@@ -12,7 +12,7 @@
   </head>
   <body>
   <body>
-    <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
+    <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="https://hazelspooder.github.io/lunarfluorite/lfl.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
 	<p></p>
 
     <img src="clashield/1.png">
