--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 
-    <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="lflogo.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
+    <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="lfl.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
 	<p>a unicorn and a spider walk into a bar...and then a husky smashed through a window!?</p>
 	<p>with their powers combined, they made...a modding group?</p>
     <p>⚠️Site still a WIP!!⚠️</p>
