--- a/3airmods/stone3.html
+++ b/3airmods/stone3.html
@@ -8,30 +8,46 @@
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="shortcut icon" type="image/png" href="https://hazelspooder.github.io/lunarfluorite/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://hazelspooder.github.io/lunarfluorite/lficon.png"/>
   </head>
   <body>
-    <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="https://hazelspooder.github.io/lunarfluorite/lflogo.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
+    <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="https://hazelspooder.github.io/lunarfluorite/lfl.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
 	<p></p>
 
-    <img src="stone3/1.jpg">
+    <img src="stone3/0.png">
 		<p>Battle against the Doctor's favorite assistant from the movies in Sonic 3 A.I.R!</p>
 <p>Description here
 </p>
-		<p>Mod by LunarFluorite</p>
+		<p>Mod by LunarFluorite, Heatto, pics_pixels & LunarCryptik</p>
 		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/stone3/stone_3_air.zip"><p>Download</p>
 		
-		<a href="stone3/2.jpg"><img src="stone3/2.jpg"style="padding:2px;"width="212" height="120"></a>
+		<a href="stone3/1.png"><img src="stone3/1.png"style="padding:2px;"width="212" height="120"></a>
 		
-		<a href="stone3/3.jpg"><img src="stone3/3.jpg"style="padding:2px;" width="212" height="120"></a>
+		<a href="stone3/2.png"><img src="stone3/2.png"style="padding:2px;" width="212" height="120"></a>
 		
-		<a href="stone3/4.jpg"><img src="stone3/4.jpg"style="padding:2px;" width="212" height="120"></a>
+		<a href="stone3/3.png"><img src="stone3/3.png"style="padding:2px;" width="212" height="120"></a>
 		
-		<a href="stone3/5.jpg"><img src="stone3/5.jpg"style="padding:2px;" width="212" height="120"></a>
+		<a href="stone3/4.png"><img src="stone3/4.png"style="padding:2px;" width="212" height="120"></a>
 		
-		<a href="stone3/6.jpg"><img src="stone3/6.jpg"style="padding:2px;" width="212" height="120"></a>
+		<a href="stone3/5.png"><img src="stone3/5.png"style="padding:2px;" width="212" height="120"></a>
 		
-		<a href="stone3/7.jpg"><img src="stone3/7.jpg"style="padding:2px;" width="212" height="120"></a>
+		<a href="stone3/6.png"><img src="stone3/6.png"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="stone3/7.png"><img src="stone3/7.png"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="stone3/8.png"><img src="stone3/8.png"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="stone3/9.png"><img src="stone3/9.png"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="stone3/10.png"><img src="stone3/10.png"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="stone3/11.png"><img src="stone3/11.png"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="stone3/12.png"><img src="stone3/12.png"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="stone3/13.png"><img src="stone3/13.png"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="stone3/14.png"><img src="stone3/14.png"style="padding:2px;" width="212" height="120"></a>
 		</p> 
 			<p></p>
 				<p></p>
