--- a/3airmods/rd.html
+++ b/3airmods/rd.html
@@ -8,7 +8,7 @@
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="shortcut icon" type="image/png" href="https://hazelspooder.github.io/lunarfluorite/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://hazelspooder.github.io/lunarfluorite/lficon.png"/>
   </head>
   <body>
     <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="https://hazelspooder.github.io/lunarfluorite/lfl.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
