--- a/3airmods/rd.html
+++ b/3airmods/rd.html
@@ -28,7 +28,7 @@
 	 <p></p>
 	 
  <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
-  <a href="https://rosy-eclairs.uwu.ai/">site created by ~rosy_eclairs</a></p>
+  <p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a>, logo created by <a href="https://twitter.com/panoramhusky">@panoramhusky</a></p>
 </footer>
   </body>
 </html>
