--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
     <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
-  <p><a href="https://rosy-eclairs.uwu.ai/">site created by ~rosy_eclairs</a>, logo created by<a href="https://twitter.com/panoramhusky">panoramhusky</a></p>
+  <p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a>, logo created by <a href="https://twitter.com/panoramhusky">@panoramhusky</a></p>
 </footer>
   </body>
 </html>
