--- a/3airmods/stone3.html
+++ b/3airmods/stone3.html
@@ -53,7 +53,7 @@
 				<p></p>
 					<p></p>
  <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
-  <p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs &  <a href="https://twitter.com/HazelSpooder"></a>HazelSpooder, logo created by <a href="https://twitter.com/panoramhusky">@panoramhusky</a></p>
+  <p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a> &  <a href="https://twitter.com/HazelSpooder">HazelSpooder</a>, logo created by <a href="https://twitter.com/panoramhusky">@panoramhusky</a></p>
 </footer>
   </body>
 </html>
