--- a/3airmods/styletails.html
+++ b/3airmods/styletails.html
@@ -32,6 +32,19 @@
 		<a href="styletails/6.jpg"><img src="styletails/6.jpg"style="padding:2px;" width="212" height="120"></a>
 		
 		<a href="styletails/7.jpg"><img src="styletails/7.jpg"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="styletails/8.jpg"><img src="styletails/8.jpg"style="padding:2px;" width="212" height="120"></a>
+		
+		<a href="styletails/9.jpg"><img src="styletails/9.jpg"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="styletails/10.jpg"><img src="styletails/10.jpg"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="styletails/11.jpg"><img src="styletails/11.jpg"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="styletails/12.jpg"><img src="styletails/12.jpg"style="padding:2px;" width="212" height="120"></a>
+
+		<a href="styletails/13.jpg"><img src="styletails/13.jpg"style="padding:2px;" width="212" height="120"></a>
+	
 		</p> 
 			<p></p>
 				<p></p>
