updated stone page

--- a/3airmods/stone3.html
+++ b/3airmods/stone3.html
@@ -15,10 +15,17 @@
 	<p></p>
 
     <img src="stone3/0.png">
-		<p>Battle against the Doctor's favorite assistant from the movies in Sonic 3 A.I.R!</p>
-<p>Description here
+		<p><b>Battle against the Doctor's favorite assistant from the movies in Sonic 3 A.I.R!</b></p>
+<p>Agent Stone has arrived on Angel Island to assist the great Doctor in his plans to relaunch the Death Egg and take over the world!
+	He has taken it upon himself to rework a lot of Robotnik's tech from his previous defeats to construct his own devices and contraptions
+	to stop Sonic, Tails, Knuckles, and whoever else gets in his way!
+	<br>
+	<br>
+	This mod has Agent Stone piloting his own variations of the midbosses, and is currently in a demo state.
+	It currently covers the Sonic 3 half of the midbosses, and includes 6 palettes to choose from, AI tweaks to the midbosses, a few boss themes
+	to choose from, compatibility with various other mods, and a custom boss!
 </p>
-		<p>Mod by LunarFluorite, Heatto, pics_pixels & LunarCryptik</p>
+		<p><b>Mod by LunarFluorite, Heatto, pics_pixels & LunarCryptik</b></p>
 		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/stone3/stone_3_air.zip"><p>Download</p>
 		
 		<a href="stone3/1.png"><img src="stone3/1.png"style="padding:2px;"width="212" height="120"></a>
