--- a/3airmods/clashield.html
+++ b/3airmods/clashield.html
@@ -25,7 +25,7 @@
 		<a href="clashield/3.png"><img src="clashield/3.png"style="padding:2px;"width="212" height="120"></a>
 		<a href="clashield/4.png"><img src="clashield/4.png"style="padding:2px;"width="212" height="120"></a>
  <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
-  <p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a> &  <a href="https://twitter.com/HazelSpooder">HazelSpooder</a>, logo created by <a href="https://twitter.com/panoramhusky">@panoramhusky</a></p>
+  <p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a> &  <a href="https://twitter.com/HazelSpooder">@HazelSpooder</a>, logo created by <a href="https://twitter.com/panoramhusky">@panoramhusky</a></p>
 </footer>
   </body>
 </html>
