--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
     <footer style="margin-right:-11px; margin-left:-10px; margin-bottom:-10px;" align="bottom">
-  </a></a></a></a></a></a></a></a><p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a> &  <a href="https://twitter.com/HazelSpooder">HazelSpooder</a>, logo created by <a href="https://twitter.com/panoramhusky">@panoramhusky</a></p>
+  </a></a></a></a></a></a></a></a><p>site created by <a href="https://rosy-eclairs.uwu.ai/">~rosy_eclairs</a> &  <a href="https://twitter.com/HazelSpooder">@HazelSpooder</a>, logo created by <a href="https://twitter.com/panoramhusky">@panoramhusky</a></p>
 </footer>
   </body>
 </html>
