boldened tagline and author text on pages

--- a/3airmods/rd.html
+++ b/3airmods/rd.html
@@ -15,9 +15,9 @@
 
 
     <img src="rd/1.jpg">
-		<p>Sonic 3 is lookin about 20% Cooler!</p>
+		<p><b>Sonic 3 is lookin about 20% Cooler!</b></p>
 		<p>Rainbow Dash replaces Tails, pretty obvious.</p>
-				<p>Original hack by jdragondawn, ported to 3 A.I.R. by rosy_eclairs & lavesiime.</p>
+				<p><b>Original hack by jdragondawn, ported to 3 A.I.R. by rosy_eclairs & lavesiime.</b></p>
     <p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd/RD.7z"><p>Download</p></p>
 	<a href="rd/2.jpg"><img src="rd/2.jpg"style="padding:2px;"width="212" height="120"></a>
 	<a href="rd/3.jpg"><img src="rd/3.jpg"style="padding:2px;"width="212" height="120"></a>
