--- a/3airmods/styletails.html
+++ b/3airmods/styletails.html
@@ -15,11 +15,11 @@
 	<p></p>
 
     <img src="styletails/1.jpg">
-		<p>Sonic 3 Style</p>
+		<p><b>Sonic 3 Style</b></p>
 <p>I decided to do what Sega didn't and give Tails a Sonic 3 makeover. I used the flying and waving sprites as a reference and built everything else from there. All sprites are created entirely by me. Make sure to put this mod in higher priority to mods that change Data Select sprites, Competition sprites, ending sprites, and Tornado sprites.</p>
-		<p>Mod by panoramhusky</p>
-		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/stylized_tails"><p>Download</p>
-		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/stylized_tails_data_folder_mode_assets"><p>Data Folder Mode Assets</p>
+		<p><b>Mod by panoramhusky</b></p>
+		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/stylized_tails.zip"><p>Download</p>
+		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails/stylized_tails_data_folder_mode_assets.zip"><p>Data Folder Mode Assets</p>
 		
 		<a href="styletails/2.jpg"><img src="styletails/2.jpg"style="padding:2px;"width="212" height="120"></a>
 		
