--- a/3airmods/clashield.html
+++ b/3airmods/clashield.html
@@ -16,9 +16,9 @@
 	<p></p>
 
     <img src="clashield/1.png">
-		<p>Introducing... Origins Classic Shield and Rings for 3 A.I.R.!</p>
+		<p><b>Introducing... Origins Classic Shield and Rings for 3 A.I.R.!</b></p>
 <p>I changed the art for rings and the shield to look like their Origins counterparts and Hazel did the code for changing colors, per-character preference and transparency options.</p>
-		<p>Mod by panoramhusky & HazelSpooder.</p>
+		<p><b>Mod by panoramhusky & HazelSpooder.</b></p>
 		<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield/Sonic_Origins_Classic_Shield__Rings.zip"><p>Download</p>
 		
 		<a href="clashield/2.png"><img src="clashield/2.png"style="padding:2px;"width="212" height="120"></a>
