--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-	<p><a href=""><img src="modicons/stat-waitaminute.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p>
+	<p><a href=""><img src="modicons/stat-waitaminute.gif"style="padding:16px;"</p><a href="3airmods/consistent-s3.html"><img src="modicons/consistent-s3.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p><a href=""><img src="modicons/static.gif"style="padding:16px;"</p>
 
 
 
