--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p><a href="https://hazelspooder.github.io/lunarfluorite/"><img src="lfl.png" style="padding-bottom:24px; padding-top:24px;"></a></p>
 	<p>A unicorn and a spider walk into a bar...and then a husky smashed through a window!?</p>
 	<p>With their powers combined, they made...a modding group?</p>
-	<p>Take a look at some mods we've made!</p>
+	<p>Take a look at some mods we've made, along with some from our friends!</p>
 	<h1>Sonic 3 A.I.R. Mods:</h1> 
 
 	<p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/rd.html"><img src="modicons/rd.gif"style="padding:16px;"</p>‎<a href="https://hazelspooder.github.io/lunarfluorite/3airmods/clashield.html"><img src="modicons/clasring.gif"style="padding:16px;"</p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/styletails.html"><img src="modicons/styletails.gif"style="padding:16px;"</p><a href="https://hazelspooder.github.io/lunarfluorite/3airmods/stone3.html"><img src="modicons/stone.gif" style="padding:16px;"</p>
