hopefully final update for now

--- a/3airmods/consistent-s3.html
+++ b/3airmods/consistent-s3.html
@@ -36,7 +36,7 @@
 	<br>
 <b>Knuckles</b>
 <br>
-	-Turnaround tweaked to match his original reference better, a clay model (1)(2). <br>
+	-Turnaround tweaked to match his original reference better, a clay model <a href="consistent-s3/claymodel1.jpg">(1)</a><a href="consistent-s3/claymodel2.jpg">(2)</a>. <br>
 	-All pivots improved, including his cutscene appearance. <br>
 	-Signpost uses his KiS2's sprite, as originally intended. In base Sonic 3&K his signpost sprite was a prototype sprite, never meant to be used/seen. <br>
 	<br>
